--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -53,12 +53,13 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:backgroundTint="@color/black"
+            android:background="@drawable/text_view_border"
             android:ems="10"
-            android:hint="Doğum Günü Giriniz"
+            android:hint="Doğum Gününüzü Seçiniz"
             android:inputType="date"
             android:minHeight="48dp"
             android:padding="15dp"
+            android:layout_margin="10dp"
             android:textColor="@color/black"
             android:textSize="18dp"
             tools:ignore="SpeakableTextPresentCheck" />
@@ -69,6 +70,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:padding="5dp"
+            android:layout_marginTop="10dp"
             app:boxCornerRadiusBottomEnd="20dp"
             app:boxCornerRadiusTopStart="20dp"
             app:boxStrokeColor="@color/kou_green"
