--- a/app/src/main/res/layout/activity_yatay_gecis.xml
+++ b/app/src/main/res/layout/activity_yatay_gecis.xml
@@ -436,5 +436,12 @@
                     android:textColor="@color/black" />
             </com.google.android.material.textfield.TextInputLayout>
         </LinearLayout>
+        <Button
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="15dp"
+            android:layout_marginTop="30dp"
+            android:text="BAŞVUR"
+            android:textSize="16dp" />
     </LinearLayout>
 </ScrollView>
