yatay gecis pdf sablonu olusturuldu.

--- a/app/src/main/res/layout/activity_yatay_gecis.xml
+++ b/app/src/main/res/layout/activity_yatay_gecis.xml
@@ -442,6 +442,7 @@
             android:layout_margin="15dp"
             android:layout_marginTop="30dp"
             android:text="BAŞVUR"
+            android:onClick="createPdf"
             android:textSize="16dp" />
     </LinearLayout>
 </ScrollView>
